debian: fix rules
Change-Id: Iff10712e5bd8493391190bb01b45aca401c80fa6

--- a/debian/rules
+++ b/debian/rules
@@ -12,9 +12,10 @@
 %:
 	dh $@ 
 
+PKG_NAME := go-dlib
+
 override_dh_auto_install:
-	mkdir -p $(CURDIR)/debian/tmp
-	make DESTDIR=$(CURDIR)/debian/tmp install
+	make DESTDIR=debian/${PKG_NAME} install
 
 override_dh_clean:
 	dh_clean
