--- a/debian/rules
+++ b/debian/rules
@@ -1,21 +1,13 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_GOPKG := pkg.linuxdeepin.com/lib
+export DH_GOLANG_INSTALL_ALL := 1
+
+export DEB_BUILD_OPTIONS := nocheck
 
 %:
-	dh $@ 
-
-PKG_NAME := go-dlib
+	dh $@ --buildsystem=golang --with=golang
 
 override_dh_auto_install:
-	make DESTDIR=debian/${PKG_NAME} install
-
-override_dh_clean:
-	dh_clean
+	dh_auto_install
+	find ${CURDIR}/debian/golang-dlib-dev -regex '.*\.git\|.*testdata\|.*LICENSE\|.*\.gitignore' | xargs rm -rf
