--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
                golang-xgb-dev,
+	       golang-gocheck-dev,
                libpulse-dev,
                libgtk-3-dev
 Standards-Version: 3.9.5
