debian/control: add golang-fsnotify-dev to Build-Depends
introduced by commit a14e47f6aa7f65905a854aa523bc0b5182ab889c

Change-Id: I556fc0820b35bc1fa944f8ce55861d2b795b70b9

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
-               golang-xgb-dev,
+               golang-xgb-dev, golang-fsnotify-dev,
 	       golang-gocheck-dev,
                libpulse-dev,
                libgtk-3-dev
