--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,8 @@ Homepage: http://www.linuxdeepin.com
 
 Package: golang-dlib-dev
 Architecture: all
-Depends: ${misc:Depends}, golang-xgb-dev, libpulse-dev, libgtk-3-dev
+Depends: ${misc:Depends}, golang-xgb-dev, golang-fsnotify-dev,
+         libpulse-dev, libgtk-3-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
 Description: Go bindings for Deepin Desktop Environment development
