adjust internal code
1. split introspection code.
2. write unit test with goconvey.
3. little change the prototype of InstallOnAny for installing
   widgets. (e.g. com.deepin.DBus.i18n, org.freedesktop.DBus.Properites
   etc)
4. write New functions for freedesktop interfaces
5. removed none useful function: setupSignalHandler

Change-Id: Id23f3142ec483753142e845303304a45178c425c

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
                golang-xgb-dev, golang-fsnotify-dev,
 	       golang-gocheck-dev,
+	       golang-goconvey-dev,
                libpulse-dev,
                libgtk-3-dev
 Standards-Version: 3.9.5
