--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,11 @@ Priority: extra
 Maintainer: Yueqian Zhang <zhangyueqian@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
                golang-xgb-dev, golang-fsnotify-dev,
-	       golang-gocheck-dev,
-	       golang-goconvey-dev,
+               golang-gocheck-dev,
+               golang-goconvey-dev,
                libpulse-dev,
-               libgtk-3-dev
+               libgtk-3-dev,
+               iso-codes
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
