mobileprovider: query mobile service providers
Change-Id: Ia0600373f64f1f05a08c1d375f847b8111976e81

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,8 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
                golang-goconvey-dev,
                libpulse-dev,
                libgtk-3-dev,
-               iso-codes
+               iso-codes,
+               mobile-broadband-provider-info
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
