convert C.GError to GError
(cherry picked from commit 6e38c3c7e598bc0c60ffdc73c0c3136c9ac3863c)

Change-Id: I028eef45baeccc282294ad9090ad25b835ce9177

--- a/gobject-2.0/config.json
+++ b/gobject-2.0/config.json
@@ -1,29 +1,1 @@
-{
-	"namespace": "GObject",
-	"version": "2.0",
-	"whitelist": {
-		"deps": [],
-		"callbacks": [],
-		"functions": [],
-		"objects": [
-			"Binding",
-			"Object",
-			"InitiallyUnowned"
-		]
-	},
-	"method-whitelist": {
-		"Object": [],
-		"InitiallyUnowned": [],
-		"Value": []
-	},
-	"blacklist": {
-		"structs": [
-			"ParamSpecPool"
-		]
-	},
-	"method-blacklist": {
-		"ValueArray": [
-			"sort"
-		]
-	}
-}
+../../../tools/gir-generator/lib.in/gobject-2.0/config.json
