--- a/gio-2.0/gio.go.in
+++ b/gio-2.0/gio.go.in
@@ -1,23 +1,1 @@
-package gio
-
-/*
-#include "gio.gen.h"
-
-[<.g_list_funcs>]
-[<.g_object_ref_unref>]
-[<.g_error_free>]
-[<.g_free>]
-#cgo pkg-config: gio-2.0
-*/
-import "C"
-import "unsafe"
-import "errors"
-
-import (
-	"pkg.linuxdeepin.com/lib/gobject-2.0"
-	"pkg.linuxdeepin.com/lib/glib-2.0"
-)
-
-[<.go_utils>]
-
-[<.go_bindings>]
+../../../tools/gir-generator/lib.in/gio-2.0/gio.go.in
