--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-howeyc-fsnotify-dev,
  golang-gocheck-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
- libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-kingpin.v2-dev, mobile-broadband-provider-info, iso-codes, dbus-x11,
+ libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info, iso-codes, dbus-x11,
 Standards-Version: 3.9.5
 Homepage: http://www.deepin.com
 
