--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
- golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-howeyc-fsnotify-dev,
+ golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev,
  golang-gopkg-check.v1-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info, iso-codes, dbus-x11,
@@ -13,7 +13,7 @@ Homepage: http://www.deepin.com
 Package: golang-dlib-dev
 Architecture: all
 Depends: ${misc:Depends},
- golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-howeyc-fsnotify-dev,
+ golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev,  golang-gir-glib-2.0-dev,
  libpulse-dev, libgtk-3-dev
 Built-Using: ${misc:Built-Using}
