feat: add field Section for DesktopAction
Change-Id: I6d520310b14d902a2746adeb5e6d1d24c336e9fb

--- a/appinfo/desktopappinfo/testdata/applications/deepin-screenshot.desktop
+++ b/appinfo/desktopappinfo/testdata/applications/deepin-screenshot.desktop
@@ -12,6 +12,7 @@ Type=Application
 [Full_Screenshot Shortcut Group]
 Exec=deepin-screenshot -f
 Name=Full Screenshot
+Name[zh_CN]=全屏截图
 
 [Delay_Screenshot Shortcut Group]
 Exec=deepin-screenshot -d 5
