--- a/debian/control
+++ b/debian/control
@@ -14,9 +14,9 @@ Homepage: http://www.deepin.com
 Package: golang-dlib-dev
 Architecture: all
 Depends: ${misc:Depends},
- golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev,
+ golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-cryptix-wav-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev,  golang-gir-glib-2.0-dev,
- libpulse-dev, libgtk-3-dev
+ libpulse-dev, libgtk-3-dev, libasound2-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
 Description: Go bindings for Deepin Desktop Environment development
