--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,15 @@
 Source: go-dlib
 Section: devel
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@deepin.com>
+Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev,
  golang-gopkg-check.v1-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev, golang-github-cryptix-wav-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info,
  iso-codes, dbus-x11, libasound2-dev
-Standards-Version: 3.9.5
-Homepage: http://www.deepin.com
+Standards-Version: 3.9.8
+Homepage: http://www.deepin.org
 
 Package: golang-dlib-dev
 Architecture: all
