--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-gopkg-check.v1-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev, golang-github-cryptix-wav-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info,
- iso-codes, dbus-x11, libasound2-dev, libpam0g-dev
+ iso-codes, dbus-x11, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev
 Standards-Version: 3.9.8
 Homepage: http://www.deepin.org
 
@@ -16,7 +16,7 @@ Architecture: all
 Depends: ${misc:Depends},
  golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-cryptix-wav-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev,  golang-gir-glib-2.0-dev,
- libpulse-dev, libgtk-3-dev, libasound2-dev, libpam0g-dev
+ libpulse-dev, libgtk-3-dev, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
 Description: Go bindings for Deepin Desktop Environment development
