--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>= 9), dh-golang, golang-go,
- golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev,
+ golang-github-burntsushi-xgb-dev,
+ golang-github-linuxdeepin-go-x11-client-dev,
  golang-gopkg-check.v1-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev, golang-github-cryptix-wav-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info,
@@ -14,7 +15,9 @@ Homepage: http://www.deepin.org
 Package: golang-dlib-dev
 Architecture: all
 Depends: ${misc:Depends},
- golang-github-burntsushi-xgb-dev, golang-github-burntsushi-xgbutil-dev, golang-github-cryptix-wav-dev,
+ golang-github-burntsushi-xgb-dev,
+ golang-github-linuxdeepin-go-x11-client-dev,
+ golang-github-cryptix-wav-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev,  golang-gir-glib-2.0-dev,
  libpulse-dev, libgtk-3-dev, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev
 Built-Using: ${misc:Built-Using}
