--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-gopkg-check.v1-dev, golang-github-smartystreets-goconvey-dev, golang-golang-x-image-dev,
  golang-gir-gobject-2.0-dev (>> 1.2.0+), golang-gir-gio-2.0-dev (>> 1.2.0+),
  golang-gir-glib-2.0-dev (>> 1.2.0+), golang-github-cryptix-wav-dev,
+ golang-github-fsnotify-fsnotify-dev,
  golang-github-mozillazg-go-pinyin-dev,
  golang-dbus-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info,
@@ -19,6 +20,7 @@ Architecture: all
 Depends: ${misc:Depends},
  golang-github-linuxdeepin-go-x11-client-dev,
  golang-github-cryptix-wav-dev,
+ golang-github-fsnotify-fsnotify-dev,
  golang-github-mozillazg-go-pinyin-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev (>> 1.2.0+), golang-gir-gio-2.0-dev (>> 1.2.0+),
  golang-gir-glib-2.0-dev (>> 1.2.0+),
