--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-gir-glib-2.0-dev (>> 1.2.0+), golang-github-cryptix-wav-dev,
  golang-github-mozillazg-go-pinyin-dev,
  libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-gopkg-alecthomas-kingpin.v2-dev, mobile-broadband-provider-info,
- iso-codes, dbus-x11, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev, golang-github-stretchr-testify-dev,libsmartutils-dev
+ iso-codes, dbus-x11, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev, golang-github-stretchr-testify-dev
 Standards-Version: 3.9.8
 Homepage: http://www.deepin.org
 
@@ -21,7 +21,7 @@ Depends: ${misc:Depends},
  golang-github-mozillazg-go-pinyin-dev,
  golang-golang-x-image-dev, golang-gir-gobject-2.0-dev (>> 1.2.0+), golang-gir-gio-2.0-dev (>> 1.2.0+),
  golang-gir-glib-2.0-dev (>> 1.2.0+),
- libpulse-dev, libgtk-3-dev, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev,libsmartutils
+ libpulse-dev, libgtk-3-dev, libasound2-dev, libpam0g-dev, golang-golang-x-net-dev
 Built-Using: ${misc:Built-Using}
 Provides: go-dlib
 Description: Go bindings for Deepin Desktop Environment development
