--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,8 @@
 #!/usr/bin/make -f
+
+
+export GOCACHE := /tmp/gocache
+
 export DH_GOPKG := pkg.deepin.io/lib
 export DH_GOLANG_INSTALL_ALL := 1
  
