--- a/debian/rules
+++ b/debian/rules
@@ -3,9 +3,9 @@
 
 export GOCACHE := /tmp/gocache
 
-export DH_GOPKG := pkg.deepin.io/lib
+export DH_GOPKG := github.com/linuxdeepin/go-lib
 export DH_GOLANG_INSTALL_ALL := 1
- 
+
 %:
 	dh $@ --buildsystem=golang --with=golang
 
