--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: go-dlib
+Source: golang-github-linuxdeepin-go-lib
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@deepin.com>
@@ -32,7 +32,6 @@ Replaces:
 Conflicts:
  golang-dlib-dev
 Built-Using: ${misc:Built-Using}
-Provides: go-dlib
 Description: Go bindings for Deepin Desktop Environment development
  DLib is a set of Go bindings/libraries for DDE development.
  Containing dbus (forking from guelfey), glib, gdkpixbuf, pulse and more.
