--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ export DH_GOLANG_INSTALL_ALL := 1
 
 override_dh_auto_install:
 	dh_auto_install
-	find ${CURDIR}/debian/golang-dlib-dev -regex '.*\.git\|.*testdata\|.*LICENSE\|.*\.gitignore' | xargs rm -rf
+	find ${CURDIR}/debian/golang-github-linuxdeepin-go-lib-dev -regex '.*\.git\|.*testdata\|.*LICENSE\|.*\.gitignore' | xargs rm -rf
 
 override_dh_fixperms:
 	dh_fixperms
