feat: update archlinux build
update archlinux build

Log:

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -14,16 +14,12 @@ makedepends=('iso-codes' 'golang-gopkg-check.v1' 'git' 'go') # git needed only f
 conflicts=('golang-deepin-lib')
 provides=('golang-deepin-lib')
 groups=('deepin-git')
-source=("$pkgname-$pkgver::source.tar.gz")
+source=('source.tar.gz')
 sha512sums=('SKIP')
-pkgver() {
-    cd $pkgname-$pkgver
-    git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
 
 prepare() {
-  export GO111MODULE=off
-  cd $pkgname-$pkgver
+ export GO111MODULE=off
+  cd $deepin_source_name
 
   sed -i 's/int connect_timeout;/extern int connect_timeout;/' pulse/dde-pulse.h
 }
@@ -32,7 +28,7 @@ check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin
-  cp -a "$srcdir/$pkgname" "$srcdir"/build/src/github.com/linuxdeepin/go-lib
+  cp -a "$srcdir/$deepin_source_name" "$srcdir"/build/src/github.com/linuxdeepin/go-lib
   cd "$srcdir"/build/src/github.com/linuxdeepin/go-lib
   # TODO: make packages for them
   go get -v github.com/smartystreets/goconvey/convey
@@ -52,6 +48,6 @@ check() {
 
 package() {
   mkdir -p "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin
-  cp -a "$srcdir/$pkgname" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-lib
+  cp -a "$srcdir/$deepin_source_name" "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-lib
   rm -r "$pkgdir"/usr/share/gocode/src/github.com/linuxdeepin/go-lib/debian
 }
