chore: arch打包增加testify依赖
arch打包增加testify依赖

Log: arch打包增加testify依赖
Influence: arch构建
Change-Id: I1f37a4e869c33029147f1fad0a5bff54a2eca580

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -43,6 +43,7 @@ check() {
   go get -v github.com/godbus/dbus/introspect
   go get -v github.com/godbus/dbus/prop
   go get -v github.com/youpy/go-wav
+  go get -v github.com/stretchr/testify
   go test -v $(go list ./... | grep -v -e lib/pulse -e lib/users/passwd -e lib/users/group -e lib/timer -e lib/log -e lib/dbus -e lib/shell)
 }
 
