--- a/debian/rules
+++ b/debian/rules
@@ -17,5 +17,5 @@ override_dh_fixperms:
 	dh_fixperms
 	find debian -name 'build_test_locale_data' -exec chmod 755 {} \;
 
-override_dh_auto_test:
-	# not use it
+#override_dh_auto_test:
+#	# not use it
